Make sure the ellipsis is visible if tours are active

--- a/src/Umbraco.Web.UI.Client/src/less/components/buttons/umb-button-ellipsis.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/buttons/umb-button-ellipsis.less
@@ -15,6 +15,7 @@
         justify-content: center;
     }
 
+    .umb-tour-is-visible .umb-tree &,
     &:hover,
     &:focus{
         opacity: 1;
